# Monado

./: CMakeLists.txt
.reuse/: dep5
doc/changes/drivers/: mr.2136.md
doc/changes/misc_features/: mr.2168.md
scripts/: generate_oxr_ext_support.py
src/xrt/auxiliary/tracking/: t_tracker_slam.cpp  t_vit_loader.c  t_vit_loader.h
src/xrt/auxiliary/util/: u_pretty_print.c  u_space_overseer.c
src/xrt/auxiliary/vive/: vive_config.c
src/xrt/drivers/android/: android_sensors.c
src/xrt/drivers/steamvr_lh/: device.cpp  steamvr_lh.cpp  steamvr_lh_interface.h
src/xrt/drivers/vive/: vive_device.c
src/xrt/drivers/wmr/: wmr_hmd.c
src/xrt/include/: CMakeLists.txt
src/xrt/include/xrt/: xrt_compositor.h  xrt_config_build.h.cmake_in  xrt_defines.h  xrt_device.h  xrt_openxr_includes.h  xrt_space.h
src/xrt/ipc/client/: ipc_client_space_overseer.c
src/xrt/ipc/server/: ipc_server_handler.c  ipc_server_per_client_thread.c
src/xrt/ipc/shared/: proto.json
src/xrt/state_trackers/oxr/: CMakeLists.txt  oxr_api_funcs.h  oxr_api_negotiate.c  oxr_api_session.c  oxr_api_space.c  oxr_api_verify.h  oxr_extension_support.h  oxr_instance.c  oxr_objects.h  oxr_session.c  oxr_space.c  oxr_system.c
src/xrt/targets/android_common/src/main/: AndroidManifest.xml
src/xrt/targets/android_common/src/main/java/org/freedesktop/monado/android_common/: AboutActivity.java
src/xrt/targets/common/: target_builder_remote.c
src/xrt/targets/openxr/: CMakeLists.txt
src/xrt/targets/openxr_android/src/main/: AndroidManifest.xml
